# coramail_fastapi_ai_router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  coramail_db.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_native_app.py
docs/: postgresql_schema_design.md  postgresql_schema_design_feedback.md
legacy/: README.md
legacy/apps/: streamlit_app.py  streamlit_native_app.py
legacy/reference_html/: search.html
legacy/static/: index_v0.html  index_v1.html
legacy/tools/: import_emails_json_to_postgres.py  legacy_compat.py  refresh_gmail_token.py  update_postgres_schema.py
pipeline/: auto_ingest.py  create_postgres_schema.py  email_classification.py  gmail_history_sync.py  gmail_postgres_fetcher.py  gmail_sqlite_fetcher.py  import_emails_json_to_postgres.py  index.py  llm_task_runtime.py  qdrant_hybridsearch.py  update_postgres_schema.py
reference_html/: dashboard.html  inbox_detail.html  settings.html
static/: app.css  index.html  index_v0.html  index_v1.html
templates/: macros.html  shell.html
templates/partials/: auto_sync.html  dashboard_distribution.html  email_detail.html  mail_rows.html  search_results.html  stats.html
templates/views/: dashboard.html  inbox.html  search.html  settings.html
